--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.2.0/jquery.flexslider-min.js"></script> 
 	<script type="text/javascript" src="js/bootstrap.js"></script> 
+	<script type="text/javascript" src="js/main.js"></script> 
 
 
     <script>
